setup project & crud user, partner, store, product

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-PORT=4000
+PORT=4001
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=alvine1234
-DB_NAME=onlinestudies
+DB_NAME=stokinventory
 PATH_URL=
